<?xml version="1.0"?>
<package format="3">
  <name>omni_mission</name>
  <version>1.0.0</version>
  <description>
    Omni robot görev paketi – LiDAR tabanlı hedef bulma, quintic polinom
    yörüngesi ve dinamik engel kaçınma. Simülasyon ve gerçek robot için
    ayrı dosyalar içerir.
  </description>
  <maintainer email="tasocak131@gmail.com">emre</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
