<?xml version="1.0"?>
<package format="3">
  <name>omni_robot_sim</name>
  <version>1.0.0</version>
  <description>3-wheeled omnidirectional robot – Gazebo Harmonic simulation and ROS2 Jazzy nodes</description>
  <maintainer email="tasocak131@gmail.com">emre</maintainer>
  <license>Apache-2.0</license>

  <!-- Build -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime – robot description / URDF -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Runtime – Gazebo Harmonic -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>

  <!-- Runtime – ros2_control / controllers -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>omni_wheel_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <!-- Runtime – navigation messages -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Runtime – Python math -->
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
